[package]
name = "desktop-postflop"
version = "0.2.7"
description = "The most advanced open-source GTO solver"
authors = ["Wataru Inariba"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/thomas-fazzari/desktop-postflop/tree/main/src-tauri"
edition = "2024"
rust-version = "1.92"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
postflop-solver = { git = "https://github.com/thomas-fazzari/postflop-solver" }
rayon = "1.8.0"
sysinfo = "0.37.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
